@startuml
skinparam backgroundColor #FFFFFF
skinparam classBorderColor #2E86C1
skinparam classBackgroundColor #EBF5FB
skinparam classHeaderBackgroundColor #2E86C1
skinparam classFontColor #1A5276
skinparam classHeaderFontColor #FFFFFF
skinparam arrowColor #2E86C1
skinparam packageBorderColor #566573
skinparam packageBackgroundColor #F8F9F9
skinparam defaultTextAlignment center
skinparam linetype ortho

left footer AV-CAR Auto Center

package "Domínios" {

  class Cliente {
    - id: Long
    - nome: String
    - endereco: String
    - bairro: String
    - cidade: String
    - estado: String
    - cep: String
    - telefone: String
    - email: String
    - tipo: String
    - documento: String
    - dataCadastro: LocalDate
    - observacoes: String
    - ativo: boolean
  }

  class PessoaFisica {
    - rg: String
    - dataNascimento: LocalDate
  }

  class PessoaJuridica {
    - inscricaoEstadual: String
    - razaoSocial: String
  }

  class Veiculo {
    - id: Long
    - placa: String
    - chassi: String
    - anoFabricacao: int
    - anoModelo: int
    - cor: String
    - quilometragem: int
    - acessorios: String
    - ativo: boolean
  }

  class Modelo {
    - id: Long
    - nome: String
  }

  class Marca {
    - id: Long
    - nome: String
    - logoUrl: String
  }

  class HistoricoClienteVeiculo {
    - id: Long
    - dataInicio: LocalDate
    - dataFim: LocalDate
  }

  class Colaborador {
    - id: Long
    - nome: String
    - matricula: String
    - cpf: String
    - telefone: String
    - email: String
    - dataAdmissao: LocalDate
    - dataDemissao: LocalDate
    - salario: Double
    - observacoes: String
    - ativo: boolean
  }

  class Funcao {
    - id: Long
    - nome: String
    - descricao: String
    - especialidade: String
    - comissao: Double
  }

  class Fornecedor {
    - id: Long
    - nome: String
    - razaoSocial: String
    - cnpj: String
    - telefone: String
    - email: String
    - endereco: String
    - bairro: String
    - cidade: String
    - estado: String
    - cep: String
    - ativo: boolean
  }

  class Peca {
    - id: Long
    - codigoNacional: String
    - codigoInterno: String
    - nome: String
    - descricao: String
    - fabricante: String
    - categoria: String
    - precoCusto: Double
    - precoVenda: Double
    - quantidadeEstoque: int
    - prazoGarantiaDias: int
    - dataCompra: LocalDate
    - ativo: boolean
  }

  class ParceiroExterno {
    - id: Long
    - nome: String
    - cnpj: String
    - tipoServico: String
    - telefone: String
    - email: String
    - ativo: boolean
  }

  class Servico {
    - id: Long
    - nome: String
    - descricao: String
    - valorMaoObra: Double
    - prazoGarantiaDias: int
    - tempoEstimado: String
    - terceirizado: boolean
    - ativo: boolean
  }

  class OrdemServico {
    - id: Long
    - numero: String
    - status: StatusOrdemServico
    - dataAbertura: LocalDate
    - dataFinalizacao: LocalDate
    - entradaVeiculo: LocalDate
    - defeitoRelatado: String
    - formaPagamento: String
    - valorDesconto: Double
    - valorTotal: Double
    - observacoes: String
  }

  enum StatusOrdemServico {
    ABERTA
    ORCAMENTO
    AGUARDANDO_PECA
    EXECUCAO
    AGUARDANDO_PAGAMENTO
    FINALIZADA
    CANCELADA
  }

  class ItemServico {
    - id: Long
    - quantidade: int
    - valorUnitario: Double
    - horaInicio: LocalDateTime
    - horaFim: LocalDateTime
    - status: String
  }

  class ItemPeca {
    - id: Long
    - quantidade: int
    - precoUnitario: Double
  }

  class ServicoExterno {
    - id: Long
    - descricao: String
    - valor: Double
    - prazoGarantiaDias: int
  }

}

' Herança
Cliente <|-- PessoaFisica
Cliente <|-- PessoaJuridica

' Associações Veículo
Veiculo *-- Modelo : modelo >
Modelo *-- Marca : marca >
HistoricoClienteVeiculo --> Veiculo : veiculo
HistoricoClienteVeiculo --> Cliente : cliente

' Colaborador
Colaborador "1" -- "N" Funcao : colaborador_funcao >

' Fornecedor → Peça
Fornecedor "1" -- "N" Peca : fornecedor >

' OrdemServico
OrdemServico --> Veiculo : veiculo
OrdemServico --> Cliente : cliente
OrdemServico --> Colaborador : responsavel
OrdemServico --> StatusOrdemServico

' Itens da OS
OrdemServico "1" -- "N" ItemServico : itens >
OrdemServico "1" -- "N" ItemPeca : pecas >
OrdemServico "1" -- "N" ServicoExterno : externos >

ItemServico --> Servico : servico
ItemPeca --> Peca : peca
ServicoExterno --> ParceiroExterno : parceiro

' Servico → Colaborador
Servico --> Colaborador : responsavel

@enduml
